ansible/roles/k8s/files/tmp/logging-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
    component: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
      component: kibana
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
        component: kibana
    spec:
      containers:
      - image: xxxandr84/fluentd:latest
        name: kibana
