ansible/roles/k8s/files/tmp/ui-ingress_.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  namespace: default
#
  labels:
    app: search-engine
    component: ui
#
#  annotations:
#    kubernetes.io/ingress.allow-http: "false"
spec:
#  tls:
#  - secretName: ui-ingress
  backend:
    serviceName: ui
    servicePort: 8000
